# ncmdump-web

./: CMakeLists.txt  README.md  decrypt.worker.js  index.html
src/: ncmcrypt.cpp  wasm_interface.cpp
src/include/: cxxopts.hpp  ncmcrypt.h
src/utils/: cJSON.cpp
wasm/: ncmdump.js  ncmdump.wasm
